# distributed-models

./: .env  .gitignore  Cargo.toml  Makefile  README.md  distributed-models.yaml  docker-compose.yml  install.sh
.github/workflows/: ci.yml
editor/: README.md  apply.sh  product.overrides.json
editor/src/vs/workbench/contrib/distributedModels/browser/: agentClient.ts  diagnosticsWatcher.ts  distributedModels.contribution.ts  editorRoots.ts  fileOperations.ts  fileWatcher.ts  inlineCompletions.ts  sidebar.ts
editor/src/vs/workbench/contrib/distributedModels/browser/media/: sidebar.css
editor/src/vs/workbench/contrib/distributedModels/common/: distributedModels.ts  types.ts
src/: bash.rs  bus.rs  cli.rs  config.rs  index.rs  job_cancel.rs  lib.rs  main.rs  messages.rs  ollama.rs  orchestrator.rs  proposals.rs  server.rs  slash.rs  tools.rs  worker.rs  workspace_path.rs
src/agents/: code_writer.rs  error_agent.rs  file_structure.rs  integration.rs  mod.rs  orchestrator.rs  review.rs
tests/: agent_flow.rs  bus_integration.rs  http_server.rs  ollama_client.rs  parsers.rs  proposal_store.rs  protocol.rs
