[package]
name = "distributed_ai_platform"
version = "0.1.0"
edition = "2018"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
redis = "0.21"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = "3.2"

[features]
default = []