[package]
name = "distributed-models"
version = "0.1.0"
edition = "2021"
authors = ["Distributed Models Contributors"]
description = "Local multi-agent AI coding backend powered by Ollama and Redis"
license = "MIT"

[[bin]]
name = "distributed-models"
path = "src/main.rs"

[lib]
name = "distributed_models"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
redis = { version = "0.25", features = ["tokio-comp", "aio", "connection-manager"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.7", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
clap = { version = "4.5", features = ["derive"] }
tree-sitter = "0.22"
tree-sitter-rust = "0.21"

[dev-dependencies]
# All test dependencies are already part of the main graph so the test suite
# never needs to fetch new crates.

[profile.release]
lto = true
codegen-units = 1
strip = true
